trading : fix for clipped text touch/no touch

--- a/src/sass/app_2/modules/trading.scss
+++ b/src/sass/app_2/modules/trading.scss
@@ -396,7 +396,7 @@
         width: 100%;
 
         .btn-purchase__text {
-            margin-left: 26px;
+            margin-left: 24px;
             position: absolute;
 
             span {
